Finished first design

--- a/styles/navigation.css
+++ b/styles/navigation.css
@@ -1,237 +1,221 @@
 .navigation {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    width: 100%;
-    padding: 0.5em 1em;
-    font-family: "Inter", sans-serif;
-    color: #000;
-  }
-  
-  .logo {
-    display: flex;
-    align-items: center;
-    font-family: grifter;
-    font-size: 1.8rem;
-    font-weight: bold;
-  }
-  
-  .blogStyles {
-    justify-content: center;
-  }
-  
-  .logo a {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    text-decoration: none;
-    color: #000;
-  }
-  /* .logo img {
-    height: 60px;
-    width: 60px;
-    margin: 0 !important;
-  } */
-  
-  .nav-list {
-    display: flex;
-    flex-direction: row;
-    padding: 5px 0;
-    margin: 0;
-    font-family: "Inter", sans-serif;
-    font-size: 1.5rem;
-  }
-  
-  .navigation li {
-    list-style: none;
-  }
-  
-  .nav-list li a {
-    margin: 0 1.5rem;
-    color: #000;
-    text-decoration: none;
-    cursor: pointer;
-  }
-  
-  .nav-on {
-    display: flex !important;
-    flex-direction: column;
-    color: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  padding: 0.5em 1em;
+  color: #000;
+  background-color: var(--grey);
+}
+
+.logo a {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  text-decoration: none;
+  color: #000;
+}
+
+.nav-list {
+  display: flex;
+  flex-direction: row;
+  padding: 5px 0;
+  margin: 0;
+  font-size: 1.5rem;
+  font-family: satoshiMedium;
+}
+
+.navigation li {
+  list-style: none;
+}
+
+.nav-list li a {
+  margin: 0 1.5rem;
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.nav-on {
+  display: flex !important;
+  flex-direction: column;
+  color: #fff;
+  right: -300px;
+  top: 0;
+  padding-right: 0em;
+  background-color: var(--orange);
+  height: 100vh;
+  z-index: 5;
+  position: fixed;
+  -webkit-animation: slideIn 500ms ease 0ms 1 forwards;
+  animation: slideIn 500ms ease 0ms 1 forwards;
+}
+
+.nav-off {
+  display: flex !important;
+  flex-direction: column;
+  color: #000;
+  right: 0;
+  top: 0;
+  padding-right: 1.5em;
+  height: 100vh;
+  z-index: 5;
+  position: fixed;
+  -webkit-animation: slideOut 500ms ease 0ms 1 forwards;
+  animation: slideOut 500ms ease 0ms 1 forwards;
+}
+
+@-webkit-keyframes slideOut {
+  100% {
     right: -300px;
-    top: 0;
-    padding-right: 1.5em;
-    background-color: #ffffff;
-    height: 100vh;
-    z-index: 5;
-    position: fixed;
-    -webkit-animation: slideIn 500ms ease 0ms 1 forwards;
-    animation: slideIn 500ms ease 0ms 1 forwards;
   }
-  
-  .nav-off {
-    display: flex !important;
-    flex-direction: column;
-    color: #000;
+}
+
+@keyframes slideOut {
+  100% {
+    right: -700px;
+  }
+}
+@-webkit-keyframes slideIn {
+  100% {
     right: 0;
-    top: 0;
-    padding-right: 1.5em;
-    height: 100vh;
-    z-index: 5;
-    position: fixed;
-    -webkit-animation: slideOut 500ms ease 0ms 1 forwards;
-    animation: slideOut 500ms ease 0ms 1 forwards;
   }
-  
-  @-webkit-keyframes slideOut {
-    100% {
-      right: -300px;
-    }
+}
+@keyframes slideIn {
+  100% {
+    right: 0;
   }
-  
-  @keyframes slideOut {
-    100% {
-      right: -300px;
-    }
+}
+@-webkit-keyframes slideInSocials {
+  100% {
+    margin-right: 0;
   }
-  @-webkit-keyframes slideIn {
-    100% {
-      right: 0;
-    }
+}
+@keyframes slideInSocials {
+  100% {
+    margin-right: 0;
   }
-  @keyframes slideIn {
-    100% {
-      right: 0;
-    }
+}
+.nav-icon-container {
+  display: none;
+}
+
+.nav-socials {
+  display: none;
+  margin-right: -300px;
+}
+
+.nav-socials-on {
+  display: flex;
+  -webkit-animation: slideInSocials 500ms ease 0ms 1 forwards;
+  animation: slideInSocials 500ms ease 0ms 1 forwards;
+}
+
+.nav-socials a {
+  color: #fff;
+}
+
+.disappear {
+  display: none !important;
+}
+
+@media screen and (min-width: 2000px) {
+  .navigation {
+    padding: 1em 2em;
   }
-  @-webkit-keyframes slideInSocials {
-    100% {
-      margin-right: 0;
-    }
+  .nav-list {
+    font-size: 2.5rem;
+    padding-top: 1rem;
   }
-  @keyframes slideInSocials {
-    100% {
-      margin-right: 0;
-    }
+  .logo {
+    font-size: 3.2rem;
+  }
+}
+
+@media screen and (max-width: 1200px) {
+  .nav-list {
+    font-size: 1.25rem;
+  }
+
+  .nav-list a {
+    margin: 0 1rem !important;
+  }
+}
+
+@media screen and (max-width: 970px) {
+  .nav-list {
+    display: none;
+    padding-top: 2rem;
+    width: 45%;
+  }
+  .nav-list li {
+    padding: 0.8em 0;
+    width: -webkit-fit-content;
+    width: -moz-fit-content;
+    width: fit-content;
+    white-space: nowrap;
   }
   .nav-icon-container {
-    display: none;
-  }
-  
-  .nav-socials {
-    display: none;
-    margin-right: -300px;
-  }
-  
-  .nav-socials-on {
     display: flex;
-    -webkit-animation: slideInSocials 500ms ease 0ms 1 forwards;
-    animation: slideInSocials 500ms ease 0ms 1 forwards;
+    position: absolute;
+    right: 0;
+    top: 0;
+    padding: 0.5em 1em 0 0;
+    z-index: 15;
   }
-  
-  .nav-socials a {
-    color: #fff;
+  .nav-socials {
+    flex-direction: column;
+    width: 45%;
+    align-items: center;
+    justify-content: space-evenly;
+    padding-bottom: 5em;
+    z-index: 15;
+    position: fixed;
+    right: 0;
+    bottom: 0;
   }
-  
-  .disappear {
-    display: none !important;
+  .nav-socials span {
+    text-align: center;
+    padding: 0 0.3em;
+    margin-bottom: 0.5em;
   }
-  
-  @media screen and (min-width: 2000px) {
-    .navigation {
-      padding: 1em 2em;
-    }
-    .nav-list {
-      font-size: 2.5rem;
-      padding-top: 1rem;
-    }
-    .logo {
-      font-size: 3.2rem;
-    }
+  .logo {
+    padding: 0.2em;
   }
-  
-  @media screen and (max-width: 1200px) {
-    .nav-list {
-      font-size: 1.25rem;
-     
-    }
-  
-    .nav-list a {
-      margin: 0 1rem !important;
-    }
+}
+@-webkit-keyframes fadeIn {
+}
+@keyframes fadeIn {
+}
+@media screen and (min-width: 2560px) {
+  .navigation {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    padding: 1em 5em;
   }
-  
-  @media screen and (max-width: 970px) {
-    .nav-list {
-      display: none;
-      padding-top: 2rem;
-      width: 45%;
-    }
-    .nav-list li {
-      padding: 0.8em 0;
-      width: -webkit-fit-content;
-      width: -moz-fit-content;
-      width: fit-content;
-    }
-    .nav-icon-container {
-      display: flex;
-      position: absolute;
-      right: 0;
-      top: 0;
-      padding: 0.5em 1em 0 0;
-      z-index: 15;
-    }
-    .nav-socials {
-      flex-direction: column;
-      width: 45%;
-      align-items: center;
-      justify-content: space-evenly;
-      padding-bottom: 5em;
-      z-index: 15;
-      position: fixed;
-      right: 0;
-      bottom: 0;
-    }
-    .nav-socials span {
-      font-family: mabry, sans-serif;
-      text-align: center;
-      padding: 0 0.3em;
-      margin-bottom: 0.5em;
-    }
-    .logo {
-      padding: 0.2em;
-    }
+}
+@media screen and (max-width: 425px) {
+  .navigation {
+    padding: 0.5em 0;
   }
-  @-webkit-keyframes fadeIn {
+  .logo img{
+    width: 60%;
+    height: auto;
   }
-  @keyframes fadeIn {
+
+  .nav-list {
+    width: 58%;
   }
-  @media screen and (min-width: 2560px) {
-    .navigation {
-      position: absolute;
-      top: 0;
-      left: 0;
-      right: 0;
-      padding: 1em 5em;
-    }
+
+  .nav-socials {
+    width: 58%;
   }
-  @media screen and (max-width: 425px) {
-    .navigation {
-      padding: 0.5em 0;
-    }
-    .logo {
-      font-size: 1.5rem;
-    }
-    /* .logo img {
-      height: 50px;
-      width: 50px;
-    } */
+}
+@media screen and (max-width: 320px) {
+  .nav-socials {
+    padding-bottom: 9em;
   }
-  @media screen and (max-width: 320px) {
-    .nav-socials {
-      padding-bottom: 9em;
-    }
-    .nav-list {
-      width: 50%;
-    }
-  }
+}
