--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,2 +1,72 @@
-@import url("./footer.css");
-@import url("./navigation.css")
+@import url("./navigation.css");
+@font-face {
+    font-family: generalSansRegular;
+    src: url("/fonts/GeneralSans-Regular.ttf");
+}
+
+@font-face {
+    font-family: satoshiMedium;
+    src: url("/fonts/Satoshi-Regular.ttf");
+}
+
+* {
+    box-sizing: border-box;
+}
+:root {
+    --blue: #3778f4;
+    --light-blue: #0bb6fc;
+    --orange: #fb8112;
+    --purple: #504eec;
+    --grey: #d6e9f1;
+}
+
+body {
+    overflow-x: hidden;
+    font-family: generalSansRegular;
+    margin: 0;
+    background: url("/images/bg2.jpg");
+    background-position: center;
+    background-attachment:fixed;
+    background-size: cover;
+}
+h1, h2, h3 {
+    text-transform: capitalize;
+}
+h1 {
+    font-family: satoshiMedium;
+    font-size: 2.5rem;
+}
+
+h2 {
+    font-size: 2rem;
+}
+
+h3 {
+    font-size: 1.5rem;
+}
+
+ul, p, span, label, input, textarea {
+    font-size: 1.1rem;
+    font-family: generalSansRegular;
+}
+
+a {
+    text-decoration: none;
+    color: #000;
+}
+
+@media screen and (max-width:425px){
+    h1 {
+        font-size: 2.25rem;
+    }
+    h2{
+        font-size: 1.75rem;
+    }
+    h3 {
+        font-size: 1.25rem;
+    }
+
+    ul, p, span, label, input, textarea {
+        font-size: 1.05rem;
+    }
+}
