--- a/styles/globals.css
+++ b/styles/globals.css
@@ -56,6 +56,12 @@ a {
 }
 
 @media screen and (max-width:425px){
+    body {
+        background: url("/images/bg3.jpg");
+        background-position: center;
+        background-attachment:fixed;
+        background-size: cover;
+    }
     h1 {
         font-size: 2.25rem;
     }
