--- a/styles/aboutUs.module.css
+++ b/styles/aboutUs.module.css
@@ -1,77 +1,87 @@
 .container {
-    display: flex;
-    flex-direction: row;
+  display: flex;
+  flex-direction: row;
 }
 
 .detailsContainer {
-    display: flex;
-    flex-direction: row;
-    width: 100%;
-    max-width: 1000px;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    margin-top: 4rem;
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  max-width: 700px;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  margin-top: 4rem;
 }
 
 .detail {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 280px;
-    height: 400px;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 280px;
+  height: 400px;
+  margin-bottom: 4rem;
+  height: 640px;
 }
 
+/* .detail:nth-child(1) {
+    height: 840px;
+} */
 .detailExpanded {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 100%;
-    max-width: 600px;
-    margin-top: 2rem;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  max-width: 600px;
+  margin-top: 2rem;
 }
 
 .detail h3 {
-    position: relative;
-    margin-top: 6rem;
-    margin-bottom: 0;
-    text-align: center;
+  position: relative;
+  margin-top: 6rem;
+  margin-bottom: 0;
+  text-align: center;
 }
 .detail p {
-    position: relative;
+  position: relative;
 }
 
 .detail img {
-    position: absolute;
-    top: -30px;
-    border-radius: 5px;
+  position: absolute;
+  top: -30px;
+  border-radius: 5px;
 }
 
-@media screen and (max-width: 1200px) {
-    .detailsContainer {
-        justify-content: center;
-    }
+@media screen and (max-width: 1440px) {
+  .detailsContainer {
+    max-width: 1000px;
+    justify-content: center;
+  }
 
-    .detail {
-        margin: 0 2rem 4rem 2rem;
-    }
+  .detail {
+    margin: 0 2rem 4rem 2rem;
+  }
 
-    .detailExpanded {
-        margin-top: 0;
-    }
+  .detailExpanded {
+    margin-top: 0;
+  }
 }
 
 @media screen and (max-width: 500px) {
-    .detailExpanded img {
-        width: 100%;
-        height: auto;
-    }
+  .detailExpanded img {
+    width: 100%;
+    height: auto;
+  }
+
+  .detail {
+    height: fit-content;
+  }
 }
 
 @media screen and (max-width: 375px) {
-    .detail {
-        margin-left: 0;
-        margin-right: 0;
-    }
+  .detail {
+    margin-left: 0;
+    margin-right: 0;
+  }
 }
