--- a/styles/aboutUs.module.css
+++ b/styles/aboutUs.module.css
@@ -24,6 +24,10 @@
   height: 640px;
 }
 
+.detail ul, .detailExpanded ul {
+  padding-left: 1.5rem;
+}
+
 /* .detail:nth-child(1) {
     height: 840px;
 } */
