--- a/styles/hero.module.css
+++ b/styles/hero.module.css
@@ -1,17 +1,18 @@
 .img {
     border-radius: 5px;
+    max-width: 80%;
+    height: auto;
 }
 
 .container {
-    margin-bottom: 10rem;
+    margin-bottom: 3rem;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1024px) {
     .img {
-        width: 100%;
-        height: auto;
+        max-width: 100%;
     }
 }
