--- a/styles/aboutUs.module.css
+++ b/styles/aboutUs.module.css
@@ -11,6 +11,7 @@
   justify-content: space-between;
   flex-wrap: wrap;
   margin-top: 4rem;
+ 
 }
 
 .detail {
@@ -22,12 +23,14 @@
   height: 400px;
   margin-bottom: 4rem;
   height: 680px;
+  
 }
 
 .detail ul li, .detailExpanded ul li {
   letter-spacing: .15px;
   margin-bottom: .25rem;
   font-size: 1.05rem;
+  font-family: "Inter";
 }
 .detail ul, .detailExpanded ul {
   padding-left: 1.5rem;
@@ -44,6 +47,7 @@
   width: 100%;
   max-width: 600px;
   margin-top: 2rem;
+  font-family: "Inter";
 }
 
 .detail h3 {
@@ -54,6 +58,7 @@
 }
 .detail p {
   position: relative;
+  font-family: "Inter";
 }
 
 .detail img {
