--- a/styles/footer.module.css
+++ b/styles/footer.module.css
@@ -14,6 +14,7 @@
   color: #000;
   text-align: center;
   padding: 1.5em;
+  font-family: "Inter";
 }
 
 .socials {
@@ -28,7 +29,7 @@
 .plug {
   position: absolute;
   right: 0;
-  font-size: 0.8rem;
+  font-size: 0.7rem;
   padding-right: 2rem;
 }
 
