--- a/styles/hero.module.css
+++ b/styles/hero.module.css
@@ -4,6 +4,9 @@
     height: auto;
 }
 
+.img2 {
+    display: none;
+}
 .container {
     margin-bottom: 3rem;
     display: flex;
@@ -11,6 +14,22 @@
     align-items: center;
 }
 
+@media screen and (max-width: 425px) {
+    .img {
+        display: none;
+    }
+
+    .img2 {
+        display: flex;
+        width: 90%;
+        height: auto;
+        border-radius: 5px;
+    }
+
+    .container {
+        width: 100%;
+    }
+}
 @media screen and (max-width: 1024px) {
     .img {
         max-width: 100%;
